# chatbot-rust-data-scrapping

./: ASSUMPTIONS.md  README.md
data_scrapping/: Cargo.toml  README.md
data_scrapping/src/: main.html  main.rs  prompt_generator.rs
prompt-dataset-gen/: Cargo.toml
prompt-dataset-gen/src/: lib.rs
