[package]
name = "data_scrapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
soup = "0.3.0"
log = "0.4.20"
env_logger = "0.11.2"
indicatif = "0.17.8"
